# risc0-to-bitvm2

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.dockerfile  final_spv_build.dockerfile  get_headers.sh  header_chain_build.dockerfile  output.txt
boundless/: Cargo.toml
boundless-client/: Cargo.toml
boundless-client/src/: main.rs
boundless/src/: app.rs  host.rs  lib.rs  main.rs
circuits/: .gitignore  Cargo.toml
circuits/src/: final_circuit.rs  header_chain.rs  lib.rs  merkle_tree.rs  mmr_guest.rs  mmr_native.rs  spv.rs  transaction.rs  utils.rs
circuits/tests/: mock_zkvm.rs  tests.rs
core/: Cargo.toml
core/src/: docker.rs  final_circuit.rs  lib.rs  main.rs  spv.rs
elfs/: final-guest  mainnet-final-spv-guest  mainnet-header-chain-guest  regtest-final-spv-guest  regtest-header-chain-guest  signet-final-spv-guest  signet-header-chain-guest  testnet4-final-spv-guest  testnet4-header-chain-guest
examples/: Cargo.toml
examples/bitcoin-pow/: Cargo.toml
examples/bitcoin-pow/methods/: Cargo.toml
examples/bitcoin-pow/methods/guest/: Cargo.toml
examples/bitcoin-pow/methods/guest/src/: main.rs
examples/bitcoin-pow/src/: lib.rs
examples/hello-world/: Cargo.toml
examples/hello-world/methods/: Cargo.toml
examples/hello-world/methods/guest/: Cargo.toml
examples/hello-world/methods/guest/src/: main.rs
examples/hello-world/src/: lib.rs
examples/verify-stark/: README.md
examples/verify-stark/methods/: build.rs
examples/verify-stark/methods/guest/: Cargo.toml
examples/verify-stark/methods/guest/src/: main.rs
examples/verify-stark/src/: lib.rs  main.rs
fflonk_proof/docker/: ceremony.Dockerfile  fflonk_pp.Dockerfile  fflonk_prover.Dockerfile  prover.Dockerfile  test_prover.Dockerfile
fflonk_proof/groth16/: stark_verify.circom  test_verifier.sol  verifier.sol  verify_for_guest.circom
fflonk_proof/groth16/circuits/: journal.circom  test_journal.circom  test_stark_verify.circom  test_verify_for_guest.circom  verify_for_guest.circom
fflonk_proof/scripts/: run_ceremony.sh  run_preprocess.sh  test_run_ceremony.sh
final-spv/: Cargo.toml  build.rs
final-spv/guest/: Cargo.toml
final-spv/guest/src/: lib.rs  main.rs
final-spv/src/: lib.rs
groth16_proof/circuits/: blake3_common.circom  test_verify_for_guest.circom  verify_for_guest.circom
groth16_proof/docker/: ceremony.Dockerfile  prover.Dockerfile  test_prover.Dockerfile
groth16_proof/scripts/: prover.sh  run_ceremony.sh  test_run_ceremony.sh
guests/: Cargo.toml
guests/final-circuit/: Cargo.toml
guests/final-circuit/guest/: Cargo.toml
guests/final-circuit/guest/src/: main.rs
guests/final-guest/: Cargo.toml  build.rs
guests/header-chain/: Cargo.toml  build.rs
guests/header-chain/guest/: Cargo.toml  build.dockerfile
guests/header-chain/guest/src/: main.rs
header-chain/: Cargo.toml  build.rs
header-chain/guest/: Cargo.toml
header-chain/guest/src/: lib.rs  main.rs
header-chain/src/: header_chain.rs
host/: Cargo.toml
host/src/: docker.rs  main.rs
proof/circuits/: blake3.circom  blake3_common.circom  blake3_compression.circom  journal.circom  stark_verify.circom  test_journal.circom  test_stark_verify.circom  test_verify_for_guest.circom  verify_for_guest.circom
proof/circuits/test/: test_stark_verify.circom  test_verify_for_guest.circom
proof/docker/: ceremony.Dockerfile  fflonk_pp.Dockerfile  fflonk_prover.Dockerfile  prover.Dockerfile  test_ceremony.Dockerfile  test_fflonk_pp.Dockerfile  test_fflonk_prover.Dockerfile  test_prover.Dockerfile
proof/scripts/: fflonk_prover.sh  run_ceremony.sh  run_preprocess.sh  test_fflonk_prover.sh  test_prover.sh  test_run_ceremony.sh  test_run_preprocess.sh
risc0_circuits/bitcoin-pow/methods/: Cargo.toml  build.rs
risc0_circuits/bitcoin-pow/methods/guest/: Cargo.toml
risc0_circuits/bitcoin-pow/methods/guest/src/: main.rs
risc0_circuits/bitcoin-pow/src/: lib.rs
risc0_circuits/verify-stark/: Cargo.toml
risc0_circuits/verify-stark/methods/: Cargo.toml
risc0_circuits/verify-stark/src/: lib.rs
src/: main.rs
