[workspace]
resolver = "2"
members = ["host", "core", "header-chain", "final-spv"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
hex = "0.4.3"
risc0-zkvm = { version = "=1.2.4", features = ["bonsai"]}
risc0-zkp = "=1.2.4"
env_logger = "0.10"
borsh = {version = "1.5.3", features = ["derive"] }
serde = "1.0"
serde_json = "1.0.108"
anyhow = { version = "1.0", default-features = false}
risc0-groth16 = { version = "=1.2.4", features = ["prove"] }
tempfile = "3.10.1"
bitcoincore-rpc = "0.19.0"
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risczero.0", default-features = false }
num-bigint = { version="0.4.5", features=["std"] }
num-traits = "0.2.19"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"] }

# [features]
# cuda = ["risc0-zkvm/cuda"]

[patch.crates-io]
ark-ff = { git = "https://github.com/chainwayxyz/algebra/", branch = "new-ate-loop" }
ark-ec = { git = "https://github.com/chainwayxyz/algebra/", branch = "new-ate-loop" }
ark-poly = { git = "https://github.com/chainwayxyz/algebra/", branch = "new-ate-loop" }
ark-serialize = { git = "https://github.com/chainwayxyz/algebra/", branch = "new-ate-loop" }
ark-bn254 = { git = "https://github.com/chainwayxyz/algebra/", branch = "new-ate-loop", features = [
  "curve",
], default-features = false }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std/" }
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives/" }
ark-relations = { git = "https://github.com/arkworks-rs/snark/" }
ark-snark = { git = "https://github.com/arkworks-rs/snark/" }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16" }