[package]
name = "boundless-client"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.6" }
alloy-primitives = { version = "0.8", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.8" }
header-chain = { path = "../header-chain" }
anyhow = { version = "1.0.68", default-features = false }
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
bincode = "1.3.3"
borsh.workspace = true 
bytemuck = "1.13.1"
hex = { workspace = true }
once_cell = { version = "1.19.0", optional = true }
parking_lot = { version = "0.12.1", optional = true }
reqwest = { version = "0.12.5", features = ["rustls-tls", "json", "http2"], default-features = false }
risc0-zkp = { workspace = true, optional = true }
risc0-zkvm = { workspace = true, default-features = false, features = ["std"] }
risc0-circuit-rv32im = { version = "1.1.3" }
risc0-zkvm-platform = { version = "1.1.3" }
serde = { workspace = true }
tokio = { version = "1.39", features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = {version = "0.3.18", features = ["env-filter"] }
dotenvy = "0.15"
url = { version = "2.5" }
clap = { version = "4.5", features = ["derive", "env"] }
boundless-market = "0.4.1"
risc0-build-ethereum = { version = "1.2" }
risc0-ethereum-contracts = { version = "1.2" }

