[package]
name = "boundless"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.3" }
alloy-primitives = { version = "0.8" }
alloy-sol-types = { version = "0.8", features = ["json"] }
anyhow = { version = "1.0.68", default-features = false }
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
bincode = "1.3.3"
borsh = { workspace = true }
bytemuck = "1.13.1"
hex = { workspace = true }
once_cell = { version = "1.19.0", optional = true }
parking_lot = { version = "0.12.1", optional = true }
reqwest = { version = "0.12.5", features = ["rustls-tls", "json", "http2"], default-features = false }
risc0-zkp = { workspace = true, optional = true }
risc0-zkvm = { workspace = true, default-features = false, features = ["std"] }
risc0-circuit-rv32im = { version = "1.1.3" }
risc0-zkvm-platform = { version = "1.1.3" }
serde = { workspace = true }
tokio = { version = "1.39", features = ["full"] }
tracing = { workspace = true }
url = { version = "2.5" }

# # boundless monorepo dependencies.
aggregation-set = { git = "ssh://git@github.com/boundless-xyz/boundless.git", branch = "main"}
# guest-assessor = { git = "ssh://git@github.com/boundless-xyz/boundless.git", tag = "v0.1.0" }
boundless-market = { git = "ssh://git@github.com/boundless-xyz/boundless.git", branch = "main" }
# broker = { git = "ssh://git@github.com/boundless-xyz/boundless.git", tag = "v0.1.0" }

# For IRisc0Verifier contract
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum/", tag = "v1.1.0" }


