[package]
name = "circuits"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.214"
borsh = {version = "1.5.1", features = ["derive"] }
risc0-zkvm = "1.1.2"

sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0", default-features = false }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risczero.0", default-features = false, features = ["serde"]}


[dev-dependencies]
hex = "0.4.3"
hex-literal = "0.4.1"

