[package]
name = "circuits"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = {version = "1.5.1", features = ["derive"] }
sha2 =  { version = "0.10.8", default-features = false }
crypto-bigint = { version = "0.5.5", default-features = false }

[dev-dependencies]
hex = "0.4.3"
hex-literal = "0.4.1"