[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
circuits = { path = "../circuits" }
borsh = {version = "1.5.1", features = ["derive"] }
risc0-zkvm = {version = "1.1.3", default-features = false, features = ["prove"]}
risc0-zkp = {version = "1.1.3", default-features = false, features = ["prove"]}
risc0-binfmt = {version = "1.1.3"}
risc0-circuit-recursion = {version = "1.1.3"}
sha2 =  { version = "0.10.8", default-features = false }
blake3 = { version = "1.5.4", default-features = false }
tempfile.workspace = true
risc0-groth16.workspace = true
hex.workspace = true
crypto-bigint.workspace = true
serde_json.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
