[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-to-bitvm2-core = { "path" = "../core" }
borsh.workspace = true
risc0-zkvm = {version = "=1.2.5", default-features = false, features = ["bonsai", "client", "prove"]}
risc0-zkp = {version = "=1.2.5", default-features = false, features = ["prove"]}
risc0-binfmt = {version = "=1.2.5"}
risc0-circuit-recursion = {version = "=1.2.5"}
sha2 =  { version = "0.10.8", default-features = false }
blake3 = { version = "1.5.0", default-features = false }
tempfile.workspace = true
risc0-groth16.workspace = true
hex.workspace = true
crypto-bigint.workspace = true
serde_json.workspace = true
num-bigint.workspace = true
num-traits.workspace = true

[dev-dependencies]
hex-literal = "0.4.1"
bitcoin = "0.32.5"
