[package]
name = "final-spv-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
core = { path = "../../core" }
blake3 = { version = "1.5.0", default-features = false }
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", rev = "c3b70f1", default-features = false, features = ['std'] }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }