[package]
name = "header-chain-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-to-bitvm2-core = { path = "../../core" }
risc0-zkvm = { version = "2.0.1", default-features = false, features = ['std'] }

[dev-dependencies]
hex = "0.4.3"
hex-literal = "0.4.1"

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }