[package]
name = "verify-stark"
version = "0.1.0"
edition = "2021"

[dependencies]
verify-methods = { path = "methods" }
bitcoin-pow-methods = { path = "../bitcoin-pow/methods" }
hex = "0.4.3"
risc0-zkvm = "1.1.2"
serde = "1.0"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
prove = ["risc0-zkvm/prove"]
