[package]
name = "header-chain-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
circuits = { path = "../../../circuits" }
risc0-zkvm = {version = "1.1.2", default-features = false, features = ["prove"] }
borsh = {version = "1.5.1", features = ["derive"] }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }