[package]
name = "verify"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
bitcoin-pow-methods = { path = "../../../bitcoin-pow/methods" }
# bitcoin-pow = { path = "../../../bitcoin-pow" }
blake3 = "1.5.4"
risc0-zkvm = { version = "1.1.2" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0", default-features = false }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risczero.0", default-features = false }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false }